# aegean-org-necode-mobile

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Makefile  NECODE_MOBILE_SETUP.md  OPEN_SOURCE.md  README.md  dist-workspace.toml
.github/: dist-build-setup.yml
.github/workflows/: android-apk-release.yml  android-play-release.yml  auto-release.yml  daemon-release.yml  ios-testflight.yml  mac-direct-dist.yml  mac-testflight.yml  mobile-ci.yml  mobile-release.yml  release.yml
apps/android/app/: build.gradle.kts
apps/ios/: .lldbinit  project.yml
docs/releases/: testflight-whats-new.md
patches/codex/: README.md  absolute-path-cross-platform.patch  android-installation-id-lock.patch  approval-timestamps-serde-default.patch  client-controlled-handoff.patch  dynamic-tool-call-arguments-delta.patch  ios-exec-hook.patch  mobile-code-mode-stub.patch  mobile-shell-snapshot-timeout.patch  realtime-client-controlled-handoff.patch  realtime-dynamic-tools.patch  realtime-handoff-server-hint.patch  realtime-webrtc-env-apikey.patch  remote-app-server-websocket-cap.patch  thread-read-permissions.patch
services/kittylitter/: Cargo.toml  README.md
services/kittylitter/src/: main.rs
services/kittylitter/wix/: main.wxs
services/testflight-signup/: .gitignore  package.json  wrangler.toml
shared/rust-bridge/: Cargo.toml  generate-bindings.sh
tools/scripts/: build-android-rust.sh  build-ghostty-android.sh  download-android-tools.sh  fetch-mobile-store-artifacts.py  loop-ios.sh  run-android.sh  testflight-feedback.sh  update-alleycat-main.sh
(+405 files in other folders)
