[workspace]

[package]
name = "kittylitter"
version = "0.3.5"
edition = "2024"
license = "GPL-3.0-only"
authors = ["The Alleycat Authors"]
repository = "https://github.com/aegean-org/aegean-org-necode-mobile"
homepage = "https://github.com/aegean-org/aegean-org-necode-mobile"
description = "NeCode mobile daemon wrapper for the GPL Alleycat bridge."
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "DA2F3E1D-ED35-4E0F-A090-DBAF066F1634"
path-guid = "45FCD157-114F-40BA-8F2D-21BA43E7F15F"
license = false
eula = false

[[bin]]
name = "kittylitter"
path = "src/main.rs"

[dependencies]
alleycat = { git = "https://github.com/aegean-org/alleycat.git", branch = "main" }
anyhow = "1"

# cargo-dist builds with `cargo build --profile dist`. Mirrors the
# upstream alleycat workspace's profile so binaries are LTO-thinned in
# release artifacts.
[profile.dist]
inherits = "release"
lto = "thin"
